--- a/now.json
+++ b/now.json
@@ -6,15 +6,17 @@
 			"ACCUWEATHER_KEY": "@accuweather_key",
 			"GITHUB_CLIENT_ID": "@github_client_id",
 			"GITHUB_CLIENT_SECRET": "@github_client_secret",
-			"BASE_URL": "@base_url"
+			"BASE_URL": "@base_url",
+			"RAPIDAPI_KEY": "@rapidapi_key"
 		}
 	},
 	"env": {
 		"NASA_API_KEY": "@nasa_api_key",
-			"IEX_PUBLISHABLE_KEY": "@iex_publishable_key",
-			"ACCUWEATHER_KEY": "@accuweather_key",
-			"GITHUB_CLIENT_ID": "@github_client_id",
-			"GITHUB_CLIENT_SECRET": "@github_client_secret",
-			"BASE_URL": "@base_url"
+		"IEX_PUBLISHABLE_KEY": "@iex_publishable_key",
+		"ACCUWEATHER_KEY": "@accuweather_key",
+		"GITHUB_CLIENT_ID": "@github_client_id",
+		"GITHUB_CLIENT_SECRET": "@github_client_secret",
+		"BASE_URL": "@base_url",
+		"RAPIDAPI_KEY": "@rapidapi_key"
 	}
 }
