--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 IMGUR_CLIENT_ID=
 IMGUR_CLIENT_SECRET=
+STACKEXCHANGE_CLIENT_ID=
+STACKEXCHANGE_CLIENT_SECRET=
