--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.6.0",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
