--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "logrocket": "^1.0.3",
     "next": "9.1.2",
     "qs": "^6.9.1",
     "react": "16.11.0",
