--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.42",
     "@material-ui/styles": "^4.6.0",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.0",
