Added new env variable

--- a/now.json
+++ b/now.json
@@ -14,7 +14,8 @@
 			"IMGUR_CLIENT_SECRET": "@imgur_client_secret",
 			"STACKEXCHANGE_CLIENT_ID": "@stackexchange_client_id",
 			"STACKEXCHANGE_CLIENT_SECRET": "@stackexchange_client_secret",
-			"OMDB_API_KEY": "@omdb_api_key"
+			"OMDB_API_KEY": "@omdb_api_key",
+			"STACKEXCHANGE_KEY": "@stackexchange_key"
 		}
 	},
 	"env": {
@@ -31,6 +32,7 @@
 		"IMGUR_CLIENT_SECRET": "@imgur_client_secret",
 		"STACKEXCHANGE_CLIENT_ID": "@stackexchange_client_id",
 		"STACKEXCHANGE_CLIENT_SECRET": "@stackexchange_client_secret",
-		"OMDB_API_KEY": "@omdb_api_key"
+		"OMDB_API_KEY": "@omdb_api_key",
+		"STACKEXCHANGE_KEY": "@stackexchange_key"
 	}
 }
