--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,6 @@ IEX_PUBLISHABLE_KEY=
 ACCUWEATHER_KEY=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-RAPIDAPI_KEY=
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 IMGUR_CLIENT_ID=
@@ -12,3 +11,5 @@ IMGUR_CLIENT_SECRET=
 STACKEXCHANGE_CLIENT_ID=
 STACKEXCHANGE_CLIENT_SECRET=
 STACKEXCHANGE_KEY=
+UNSPLASH_API_KEY=
+UNSPLASH_API_SECRET=
