--- a/now.json
+++ b/now.json
@@ -7,7 +7,6 @@
 			"GITHUB_CLIENT_ID": "@github_client_id",
 			"GITHUB_CLIENT_SECRET": "@github_client_secret",
 			"BASE_URL": "@base_url",
-			"RAPIDAPI_KEY": "@rapidapi_key",
 			"SPOTIFY_CLIENT_ID": "@spotify_client_id",
 			"SPOTIFY_CLIENT_SECRET": "@spotify_client_secret",
 			"IMGUR_CLIENT_ID": "@imgur_client_id",
@@ -15,7 +14,9 @@
 			"STACKEXCHANGE_CLIENT_ID": "@stackexchange_client_id",
 			"STACKEXCHANGE_CLIENT_SECRET": "@stackexchange_client_secret",
 			"OMDB_API_KEY": "@omdb_api_key",
-			"STACKEXCHANGE_KEY": "@stackexchange_key"
+			"STACKEXCHANGE_KEY": "@stackexchange_key",
+			"UNSPLASH_API_KEY": "@unsplash_api_key",
+			"UNSPLASH_API_SECRET": "@unsplash_api_secret"
 		}
 	},
 	"env": {
@@ -25,7 +26,6 @@
 		"GITHUB_CLIENT_ID": "@github_client_id",
 		"GITHUB_CLIENT_SECRET": "@github_client_secret",
 		"BASE_URL": "@base_url",
-		"RAPIDAPI_KEY": "@rapidapi_key",
 		"SPOTIFY_CLIENT_ID": "@spotify_client_id",
 		"SPOTIFY_CLIENT_SECRET": "@spotify_client_secret",
 		"IMGUR_CLIENT_ID": "@imgur_client_id",
@@ -33,6 +33,8 @@
 		"STACKEXCHANGE_CLIENT_ID": "@stackexchange_client_id",
 		"STACKEXCHANGE_CLIENT_SECRET": "@stackexchange_client_secret",
 		"OMDB_API_KEY": "@omdb_api_key",
-		"STACKEXCHANGE_KEY": "@stackexchange_key"
+		"STACKEXCHANGE_KEY": "@stackexchange_key",
+		"UNSPLASH_API_KEY": "@unsplash_api_key",
+		"UNSPLASH_API_SECRET": "@unsplash_api_secret"
 	}
 }
